
        * BUGFIX: The new :semaphore tag contains semctl(), semget()
          and semop().

        * BUGFIX: The new :shm tag contains shmget(), shmread() and
          shmctl().

        * BUGFIX: The new :ipc tag contains :msg, :semaphore, :shm and pipe().

        * BUGFIX: The read(), seek(), sysread(), syswrite() and sysseek()
          methods have been added to :io.

        * FEATURE: flock will not die on failure when called
          with the LOCK_NB option and would return false
          due to an EWOULDBLOCK.  See function specific notes
          in autodie documentation for more details.

        * FEATURE: Stringified exceptions from flock() are significantly
          nicer to read.

        * TEST: New tests for rmdir(), mkdir(), and unlink(), thanks
          to Jacinta Richardson.

        * DOCUMENTATION: flock() is documented as being in the :file tag.

1.993 Sun Sep 14 11:15:36 AUSEST 2008

        * DOCUMENTATION: The :dbm tag is now correctly documented
          in autodie/CATEGORIES.  Thanks to Darren Duncan for spotting
          this.  (RT #39172)

        * DOCUMENTATION: The README file has been updated to reflect
          current minimum Perl versions (5.8.0) and current resources.

        * DOCUMENTATION: The closedir() function is properly
          documented as being included in the :filesys tag.

        * DOCUMENTATION: Feedback section added to the autodie
          documentation.  If you find the module useful, consider
          saying so on cpanratings.perl.org, or dropping me a note.

        * BUILD: Upgrade to Module::Intstall 0.77

1.992 Sun Sep  7 15:51:32 AUSEST 2008

        * BUGFIX: unlink(), rename(), chdir() and closedir() functions
          are now included in the :filesys tag.

        * BUGFIX: binmode() is now checked for failure as part of
          the :file tag.

        * BUGFIX: Using an unopened filehandle in an autodying
          built-in no longer triggers a spurious warning.
